--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.2",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.5.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
