--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^4.0.1",
+    "@react-native-picker/picker": "^2.11.4",
     "axios": "^1.8.4",
     "expo": "^52.0.41",
     "expo-status-bar": "^2.0.1",
